Add linting standards

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "webpack --mode=production",
     "start": "ts-node server.ts",
     "serve": "webpack serve --open --mode=development",
-    "serve:lan": "webpack serve --host 0.0.0.0"
+    "serve:lan": "webpack serve --host 0.0.0.0",
+    "lint": "eslint --fix --ext .js,.ts ."
   },
   "dependencies": {
     "@types/node": "^16.4.3",
@@ -16,7 +17,9 @@
   },
   "devDependencies": {
     "copy-webpack-plugin": "^9.0.1",
+    "eslint": "^8.52.0",
     "html-webpack-plugin": "^5.3.2",
+    "prettier": "3.0.3",
     "ts-loader": "^9.2.4",
     "typescript": "^4.3.5",
     "webpack": "^5.47.0",
